welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:38: error: type mismatch;
 found   : Unit
 required: Boolean
			if (estFaceMur()) {pos = true}
                                               ^Diagonal:38: error: type mismatch;
 found   : Unit
 required: Boolean
			if (estFaceMur()) {pos = true}
                        ^